src/app/common/components/join-banner/join-banner.component.ng.scss
@import 'defaults.scss';

:host {
  .m-joinBanner {
    height: 80px;
    width: 100%;
    position: fixed;
    bottom: 0;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;

    @include z-index(announcement);

    @include m-theme() {
      background-color: themed($m-bgColor--primaryInverted);
    }

    .m-joinBanner__container {
      display: flex;
      flex-flow: row nowrap;
      justify-content: space-around;
      align-items: center;

      .m-joinBanner__text {
        font-weight: 500;
        font-size: 18px;
        line-height: 1.222;

        @include m-theme() {
          color: themed($m-textColor--secondaryInverted);
        }

        @include unselectable;

        @media screen and (max-width: $min-tablet) {
          display: none;
        }
      }

      .m-joinBanner__logo {
        width: 130px;
        margin-bottom: 20px;

        @media screen and (min-width: $min-tablet) {
          margin-right: 100px;
        }

        @include unselectable;
      }

      // overriding button theming as m-button does not yet work well with inverted background colors.
      ::ng-deep m-button {
        display: flex;
        flex-direction: column;
        justify-content: center;

        button {
          @include unselectable;
          @include m-theme() {
            color: themed($m-textColor--primaryInverted) !important;
          }
          &:hover {
            @include m-theme() {
              background-color: themed(
                $m-bgColor--btnHoverLightAlways
              ) !important;
            }
          }
        }
      }
    }

    .m-joinBanner__closeButton {
      position: absolute;
      top: 0;
      right: 0;
      margin: 30px;
      cursor: pointer;

      @media screen and (max-width: $max-mobile) {
        margin: 30px 20px;
      }

      @media screen and (max-width: 400px) {
        margin: 5px;
      }

      @include unselectable;
      @include m-theme() {
        color: themed($m-textColor--primaryInverted);
      }
    }
  }
}

